<resources>
    <string name="app_name">WordPressClient</string>
    <string name="under_dev">This feature is under development</string>
    <string name="title_wordpress">Write, edit, and publish\nfrom anywhere.</string>
    <string name="button_login_or_signup">Log in or sign up with WordPress.com</string>
    <string name="link_enter_existing_site">Enter your existing site address</string>
    <string name="instruction_login">"Enter the address of the WordPress site you'd like to connect."</string>
    <string name="label_site_address">Site address</string>
    <string name="link_find_site">Find your site address</string>
    <string name="button_continue_login">Continue</string>
    <string name="title_login">Log in</string>
    <string name="title_get_started">Get started</string>
    <string name="instruction_sign_up">"Enter your email address to log in or create a WordPress.com account."</string>
    <string name="hint_email">Email address</string>
    <string name="notice_terms">By continuing, you agree to our Terms of Service.</string>
    <string name="button_continue_signup">Continue</string>
    <string name="button_signup_google">   Continue with Google</string>
    <string name="terms_and_service">"If you continue with Google and don't already have a WordPress.com account, you are creating an account and you agree to our Terms of Service."</string>
    <string name="title_user_web">User_Website</string>
    <string name="link_user_web">website.wordpress.com</string>
    <string name="label_content">Content</string>
    <string name="title_posts">Posts</string>
    <string name="title_pages">Pages</string>
    <string name="title_media">Media</string>
    <string name="title_comments">Comments</string>
    <string name="label_manage">Manage</string>
    <string name="title_me">Me</string>
    <string name="title_setting">Site Setting</string>
    <string name="title_admin">WP Admin</string>
    <string name="title_user_name">User name</string>
    <string name="label_account_name">Account Name</string>
    <string name="title_choose_your_site">Choose a site to open</string>
    <string name="instruction_choose_site">You can switch sites any time.</string>
    <string name="button_create_site">Create a new site</string>
    <string name="create_a_post">Create a post</string>
    <string name="you_don_t_have_any_draft_post">You don\'t have any draft post</string>
    <string name="you_don_t_have_any_published_pages">You don\'t have any published pages</string>
    <string name="create_a_page">Create a page</string>
    <string name="you_don_t_have_any_trashed_pages">You don\'t have any trashed pages</string>
    <string name="you_don_t_have_any_published_post">You don\'t have any published post</string>
    <string name="you_don_t_have_any_scheduled_post">You don\'t have any scheduled post</string>
    <string name="you_don_t_have_any_draft_page">You don\'t have any draft page</string>
    <string name="you_don_t_have_any_trashed_post">You don\'t have any trashed post</string>
    <string name="published">PUBLISHED</string>
    <string name="drafts">DRAFTS</string>
    <string name="schedules">SCHEDULES</string>
    <string name="trashed">TRASHED</string>
    <string name="posts">Posts</string>
    <string name="page">Page</string>
    <string name="title_create_new_site">Create your own website</string>
    <string name="instruction_create_new_site">Enter your own website domain</string>
    <string name="button_create_new_site">Confirm</string>
    <string name="terms_create_new_site">By continuing, you agree to our Terms of Service.</string>
    <string name="hint_create_new_site">Example: example1.wordpress.com</string>
    <string name="you_don_t_have_any_media">You don\'t have any media</string>
    <string name="you_don_t_have_any_image">You don\'t have any image</string>
    <string name="you_don_t_have_any_videos">You don\'t have any videos</string>
    <string name="you_don_t_have_any_documents">You don\'t have any documents</string>
    <string name="upload_media">Upload media</string>
    <string name="upgrade_to_Prenium_plan_VideoPress">Upgrade to Premium plan to enable VideoPress</string>
    <string name="upgrade_to_Prenium_plan_DocumentPress">Upgrade to Premium plan to enable DocumentPress</string>
    <string name="upgrade_now">Upgrade now</string>
    <string name="no_money">You don\'t have enough money!</string>
    <string name="ALL">All</string>
    <string name="images">Images</string>
    <string name="documents">Documents</string>
    <string name="videos">Videos</string>
    <string name="WordPress_Media">WordPress Media</string>
    <string name="comments">Comments</string>
    <string name="done">Done</string>
    <string name="we_ll_use_this_email_address_to_create_your_new_wordpress_com_account">We\'ll use this email address to create your new wordpress.com account</string>
    <string name="create_account">Create account</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome_to_wordpress">Welcome to wordpress</string>
    <string name="whatever_you_want_to_create_or_share_we_ll_help_you_do_it_right_here">Whatever you want to create or share we\'ll help you do it right here</string>
    <string name="create_wordpress_com_site">CREATE WORDPRESS.COM SITE</string>
    <string name="add_self_host_site">ADD SELF-HOST SITE </string>
    <string name="not_right_now">Not right now</string>
    <string name="display_name_signup">Display name</string>
    <string name="pending">PENDING</string>
    <string name="unreplied">UNREPLIED</string>
    <string name="approved">APPROVED</string>
    <string name="spam">SPAM</string>
    <string name="today">TODAY</string>
    <string name="nikocado_avocado_on_what_s_this">Nikocado Avocado on what\'s this ??</string>
    <string name="ishowspeed_on_what_s_this">Ishowspeed on what\'s this ??</string>
    <string name="donald_trump_on_what_s_this">Donald Trump on what\'s this ??</string>
    <string name="greta_thunberg_on_what_s_this">Greta Thunberg on what\'s this ??</string>
    <string name="homalander_on_what_s_this">Homalander on what\'s this ??</string>
    <string name="no_approved_comments">No approved comments</string>
    <string name="no_pending_comments">No pending comments</string>
    <string name="no_unreplied_comments">No unreplied comments</string>
    <string name="no_all_comments">No comments</string>
    <string name="namnhp_on_what_s_this">Namnhp on what\'s this ??</string>
    <string name="ng_vu_huy_khoi_on_what_s_this">Ng Vu Huy Khoi on what\'s this ??</string>
    <string name="le_chuck_on_what_s_this">Le chuck on what\'s this ??</string>
    <string name="nguyen_minh_duc_on_what_s_this">Nguyen Minh Duc on what\'s this ??</string>
    <string name="no_spam_comments">No spam comments</string>
    <string name="no_trashed_comments">No trashed comments</string>
    <string name="ngv_giang_on_what_is_this">Ngv Giang on what is this ??</string>
    <string name="luu_duc_on_what_s_this">Luu Duc on what\'s this ??</string>
    <string name="yesterday">YESTERDAY</string>
    <string name="approve_status">Approve</string>
    <string name="like_a_comment">Like</string>
    <string name="move_comment_to_trash">Trash</string>
    <string name="copy_link_comment">Copy link address</string>
    <string name="spam_comment_status">Spam</string>
    <string name="not_spam_status">Not Spam</string>
    <string name="restore_a_comment">Restore</string>
    <string name="delete_a_comment">Delete</string>
    <string name="more_action_on_cmt">More</string>
    <string name="reply_to_comment">Reply to comment...</string>
    <string name="sucessfully_change_comment_status">Sucessfully change comment status</string>
    <string name="failed_to_change_comment_status">Failed to change comment status</string>
    <string name="deleted_comment">Deleted comment</string>
    <string name="failed_to_delete_comment">Failed to delete comment</string>
    <string name="user_name">Site Title</string>
    <string name="account_name">\@Account name</string>
    <string name="my_profile">My profile</string>
    <string name="account_settings">Account Settings</string>
    <string name="app_settings">App Settings</string>
    <string name="help">Help</string>
    <string name="share_wordpress_with_a_friend">Share WordPress with a friend</string>
    <string name="wp_admin">WP Admin</string>
    <string name="log_out_of_wordpress_com">Log out of WordPress.com</string>
    <string name="first_name">First name</string>
    <string name="your_first_name">\@your_first_name</string>
    <string name="last_name">Last name</string>
    <string name="your_last_name">\@your_last_name</string>
    <string name="public_display_name">Public display name</string>
    <string name="display_name">\@display_name</string>
    <string name="about_me">About Me</string>
    <string name="interface_language">Interface Language</string>
    <string name="your_language">\@your_language</string>
    <string name="appearance">Appearance</string>
    <string name="system_default">Toggle Dark mode</string>
    <string name="privacy_settings">Privacy settings</string>
    <string name="open_device_settings">Open device settings</string>
    <string name="media">Media</string>
    <string name="optimize_images">Optimize Images</string>
    <string name="enable_to_resize_and_compress_pictures">Enable to resize and compress pictures</string>
    <string name="maximum_image_size">Maximum Image Size</string>
    <string name="_2000px">2000px</string>
    <string name="image_quality">Image Quality</string>
    <string name="medium">Medium</string>
    <string name="remove_location_from_media">Remove location from media</string>
    <string name="optimize_videos">Optimize Videos</string>
    <string name="enable_to_resize_and_compress_videos">Enable to resize and compress videos</string>
    <string name="maximum_video_size">Maximum Video Size</string>
    <string name="_720p">720p</string>
    <string name="video_quality">Video Quality</string>
    <string name="high">High</string>
    <string name="username">Username</string>
    <string name="username_gmail">username@gmail.com</string>
    <string name="your_user_name">\@your_user_name</string>
    <string name="email_address">Email address</string>
    <string name="your_address">\@your_address</string>
    <string name="primary_site">Primary site</string>
    <string name="name">\@name</string>
    <string name="web_address">Web address</string>
    <string name="web_address_status">\@Web_address</string>
    <string name="change_password">Change password</string>
    <string name="close_account">Close Account</string>
    <string name="community_forums">Community forums</string>
    <string name="get_help_from_our_group_of_volunteers">Get help from our group of volunteers</string>
    <string name="browse_our_faq">Browse our FAQ</string>
    <string name="logs">Logs</string>
    <string name="version_25_2_1">Version 25.2.1</string>
    <string name="wordpress">WordPress</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_with_friends">Share with Friends</string>
    <string name="twitter">Twitter</string>
    <string name="news">News</string>
    <string name="legal_and_more">Legal and More</string>
    <string name="contribute">Contribute</string>
    <string name="general">General</string>
    <string name="site_title">Site Title</string>
    <string name="user_site_title">user_site_title</string>
    <string name="tagline">Tagline</string>
    <string name="user_tagline">user_tagline</string>
    <string name="address">Address</string>
    <string name="username_wordpress_com">username.wordpress.com</string>
    <string name="publish">Publish</string>
    <string name="content_structure">Content structure</string>
    <string name="save">Save</string>
    <string name="publish_date">Publish Date</string>
</resources>