<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/publish_button"
        android:title="@string/publish"
        android:iconTint="@color/onBackGround"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/save_btn"
        android:title="@string/save"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/structure_btn"
        android:title="@string/content_structure"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/publish_date_btn"
        android:title="@string/publish_date"
        app:showAsAction="never" />


    <item
        android:id="@+id/help_btn"
        android:title="@string/help"
        app:showAsAction="never"
        />

</menu>
