<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostsActivity"
    android:background="@color/main_background">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/main_background">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_background"
            android:paddingTop="25dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:title="@string/posts"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/PostsTabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_background"
            app:layout_anchor="@id/toolbar"
            app:layout_anchorGravity="bottom"
            app:tabIndicatorColor="@color/blue"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@color/onBackGround"
            app:tabTextColor="@color/onSecondary">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/published" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drafts" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedules" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trashed" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/PostviewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_anchor="@id/PostsTabLayout"
            app:layout_anchorGravity="bottom"
            android:background="@color/main_background"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="40dp"
        android:src="@drawable/add"
        android:backgroundTint="#484444"
        app:tint="@color/white"/>

</RelativeLayout>