<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/main_background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_account_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_background"
        android:paddingTop="25dp"
        app:titleTextColor="@color/onBackGround"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:navigationIconTint="@color/onBackGround"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/main_background">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="19dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:fontFamily="@font/roboto"
        android:textColor="@color/onBackGround"
        android:textSize="13sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/your_user_name_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:textSize="13sp"
        android:text="@string/your_user_name"
        android:textColor="@color/onBackGround"
        android:alpha="0.5"
        />

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#444444" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="true"
        android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="19dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_address"
                android:fontFamily="@font/roboto"
                android:textColor="@color/onBackGround"                android:textSize="13sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/your_email_address_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:textSize="13sp"
                android:text="@string/your_address"
                android:textColor="@color/onBackGround"
                android:alpha="0.5"
                />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#444444" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="true"
        android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="19dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/primary_site"
                android:fontFamily="@font/roboto"
                android:textColor="@color/onBackGround"                android:textSize="13sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/your_primary_site_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:textSize="13sp"
                android:text="@string/name"
                android:textColor="@color/onBackGround"
                android:alpha="0.5"
                />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#444444" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="true"
        android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="19dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/web_address"
                android:fontFamily="@font/roboto"
                android:textColor="@color/onBackGround"                android:textSize="13sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/your_web_address_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:textSize="13sp"
                android:text="@string/web_address_status"
                android:textColor="@color/onBackGround"
                android:alpha="0.5"
                />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#444444" />


    <LinearLayout
        android:id="@+id/change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="19dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:fontFamily="@font/roboto"
                android:textColor="@color/onBackGround"                android:textSize="13sp"
                android:textStyle="bold"/>

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#444444" />


    <LinearLayout
        android:id="@+id/close_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="19dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close_account"
                android:fontFamily="@font/roboto"
                android:textColor="@color/red"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#444444" />

</LinearLayout>
